# color-rs

./: .gitignore  .travis.yml  AUTHORS  Cargo.toml  Makefile  README.md
lib/: color  libcolor-44681ee4-0.1.rlib
src/: alpha.rs  channel.rs  color.rs  hsv.rs  lib.rs  rgb.rs  srgb.rs  ycbcr.rs
